static files not showing, fixed

--- a/staticfiles/ibanking/css/banking.css
+++ b/staticfiles/ibanking/css/banking.css
@@ -22,12 +22,10 @@ p {
     font-size: 16px;
 }
 
-.navbar-light {
-    padding: 10px 0 !important;
-}
+
 
 .navbar-light .navbar-nav .nav-link {
-    padding: 5px 15px;
+    padding: 0px 15px;
     color: black;
     font-weight: bold;
 }
